--- a/css/components.css
+++ b/css/components.css
@@ -137,7 +137,7 @@
 .navbar__list {
   display: flex;
   align-items: center;
-  gap: var(--space-xl);
+  gap: 30px; /* Tambah gap biar ga dempet */
 }
 
 .navbar__link {
